# django-conditional-views

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  HISTORY.rst  LICENSE.md  README.rst  pyproject.toml  pytest.ini  readthedocs.yml  setup.py  tox.ini
.circleci/: config.yml
docs/: Makefile  api.rst  concepts.rst  conf.py  getting_started.rst  index.rst  requirements.readthedocs.txt  usage.rst
src/django_conditional_views/: __init__.py  conditional_get.py  helpers.py  views.py
src/django_conditional_views/elements/: base.py  etag.py  last_modified.py
tests/: conftest.py  models.py  settings.py  test_django_conditional_views.py  test_elements.py  test_integrated.py  test_views.py  views.py
