[tool.poetry]
name = "django_conditional_views"
version = "0.1.2"
description = "Simple Etag and Last-Modified mixins for class based views."
authors = ["Andrew Cordery <cordery@gmail.com>"]
license = "MIT"
homepage="https://github.com/cordery/django-conditional-views"
repository="git@github.com:cordery/django-conditional-views.git"
documentation="https://django-conditional-views.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.7"
pytest-django = "^3.4"
pytest-pythonpath = "^0.7.3"
pytest-cov = "^2.5"
coverage = "^4.5"
pygments = "^2.2"
sphinx = "^1.7"
tox = "^3.2"
sphinx-autodoc-typehints = "^1.3"
toml = "^0.9.4"
